--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
  "name": "platform-api",
  "version": "1.0.0",
  "scripts": {
-  "dev": "nodemon server.ts",
+  "dev": "nodemon src/server.ts",
+  "dev:prisma": "nodemon src/app.ts",
   "dev:start": "nodemon --exec ts-node src/app.ts",
   "build": "tsc",
   "start": "node dist/app.js",
+  "start:dev": "node dist/server.js",
   "prisma:generate": "prisma generate",
   "prisma:migrate": "prisma migrate dev",
   "prisma:push": "prisma db push",
@@ -20,16 +22,17 @@
   "seed:esm": "ts-node-esm prisma/seed.ts"
  },
  "dependencies": {
-  "@prisma/adapter-pg": "^7.0.0",
-  "@prisma/client": "^7.0.0",
+  "@prisma/adapter-pg": "^7.2.0",
+  "@prisma/client": "^7.2.0",
   "cookie-parser": "^1.4.7",
   "cors": "^2.8.5",
+  "date-fns": "^4.1.0",
   "dotenv": "^16.6.1",
   "express": "^5.1.0",
   "jsonwebtoken": "^9.0.2",
   "morgan": "^1.10.1",
   "nodemailer": "^6.9.7",
-  "pg": "^8.16.3",
+  "pg": "^8.17.1",
   "swagger-jsdoc": "^6.2.8",
   "swagger-ui-express": "^5.0.1",
   "zod": "^4.3.5"
@@ -45,7 +48,7 @@
   "@types/swagger-jsdoc": "^6.0.4",
   "@types/swagger-ui-express": "^4.1.8",
   "nodemon": "^3.0.1",
-  "prisma": "^7.0.0",
+  "prisma": "^7.2.0",
   "ts-node": "^10.9.2",
   "tslib": "^2.8.1",
   "tsx": "^4.21.0",
